# polars-xml

./: .gitignore  Cargo.toml  README.md  pyproject.toml  typing.py
.github/workflows/: publish_to_pypi.yml  test_and_lint.yml
src/: lib.rs
tests/: test_xml.py
