[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polars-xml"
requires-python = ">=3.12"
dependencies = [
  "polars >= 1.32.0"
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "pytest"
]


[tool.pyright]
venvPath = "."
venv = ".devenv/state/venv"
include = ["tests/**"]
exclude = ["**/__pycache__"]
typeCheckingMode = "standard"

[tool.ruff]
src = ["polars_xml", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
